compiler/testData/diagnostics/tests/dataClasses/dataObjectDisabled.fir.kt
// RUN_PIPELINE_TILL: FRONTEND
// LANGUAGE: -DataObjects
<!WRONG_MODIFIER_TARGET!>data<!> object Object
